# cbcoutinho.github.io

./: .gitignore  404.html  CNAME  Makefile  Pipfile  README.md  archives.html  authors.html  building-a-custom-provider-using-the-terraform-provider-framework.html  categories.html  clojupyter.html  faust-oauth.html  index.html  keybase.txt  my-first-review.html  oauth2-kakfa-and-python.html  params.json  pelicanconf.py  pubkey.asc  publishconf.py  pyproject.toml  sitemap.xml  tags.html  tasks.py  terraform-plugin-provider.html  test.html
.github/workflows/: release.yml
author/: chris-coutinho.html
category/: notes.html  posts.html  review.html
content/: keybase.txt  keyboard-review.md  test.ipynb
content/Notes/: clojupyter.md  keyboard-review.md  oauth-python.md  terraform-provider-framework.md  test.md
content/files/: keybase.txt
content/notebooks/: clojupyter.ipynb  test.ipynb
content/notes/: clojupyter.ipynb  clojupyter.nbdata  test.ipynb  test.nbdata
content/notes/reviews/: keyboard-review.md
content/pages/: 404.md  about.md  contact.md
content/posts/: clojupyter.md  keyboard-review.md  oauth-python.md  terraform-provider-framework.md  test.md
drafts/: building-a-custom-provider-using-the-terraform-provider-framework.html  clojupyter.html  terraform-plugin-provider.html  test.html
feeds/: all.atom.xml  notes.atom.xml  posts.atom.xml  review.atom.xml
files/: pubkey.asc
pages/: about.html  contact.html
tag/: tag1.html  tag2.html  tag3.html
themes/future-imperfect/templates/: article.html  base.html  index.html
(+2 files in other folders)
