[tool.poetry]
name = "cbcoutinho.github.io"
version = "0.1.0"
description = ""
authors = ["Chris Coutinho <chrisbcoutinho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.1"
markdown = "^3.1"
ghp-import = "^0.5.5"
matplotlib = "^3.1"
pelican-liquid-tags = "^1.0.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
